--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^7.3.5",
     "@react-router/node": "^7.9.2",
     "@react-router/serve": "^7.9.2",
+    "axios": "^1.13.2",
     "isbot": "^5.1.31",
     "jwt-decode": "^4.0.0",
     "react": "^19.1.1",
