--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.5",
     "@mui/material": "^7.3.5",
+    "@mui/x-date-pickers": "^8.18.0",
     "@react-router/node": "^7.9.2",
     "@react-router/serve": "^7.9.2",
     "axios": "^1.13.2",
+    "dayjs": "^1.11.19",
     "isbot": "^5.1.31",
     "jwt-decode": "^4.0.0",
     "react": "^19.1.1",
